[package]
name = "trojan-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "High-performance Trojan protocol server"
keywords = ["trojan", "proxy", "tls", "server"]
categories = ["network-programming"]

[features]
default = ["ws"]
ws = ["tokio-tungstenite", "trojan-core/ws"]
analytics = ["trojan-analytics"]

[lib]
name = "trojan_server"
path = "src/lib.rs"

[[bin]]
name = "trojan-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
hex = "0.4"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "signal",
    "sync",
] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.24", optional = true }
tokio-util = "0.7"
socket2 = "0.6"
toml = "0.9"
parking_lot = "0.12"
tracing = { version = "0.1", features = ["attributes"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# workspace crates
trojan-core.workspace = true
trojan-proto.workspace = true
trojan-auth.workspace = true
trojan-config.workspace = true
trojan-metrics.workspace = true
trojan-analytics = { workspace = true, optional = true }

[dev-dependencies]
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
tempfile = "3"
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "server"
harness = false
