[package]
name = "trojan-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "High-performance Trojan protocol server"
keywords = ["trojan", "proxy", "tls", "server"]
categories = ["network-programming"]
readme = "README.md"

[features]
default = ["ws", "rules"]
ws = ["tokio-tungstenite", "trojan-core/ws"]
analytics = ["trojan-analytics"]
rules = ["trojan-rules", "dep:webpki-roots", "dep:arc-swap"]
geoip = ["rules", "trojan-rules/geoip"]

[lib]
name = "trojan_server"
path = "src/lib.rs"

[[bin]]
name = "trojan-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
hex.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "signal",
    "sync",
] }
tokio-rustls.workspace = true
tokio-tungstenite = { workspace = true, optional = true }
tokio-util.workspace = true
socket2.workspace = true
webpki-roots = { workspace = true, optional = true }
toml.workspace = true
parking_lot.workspace = true
tracing = { workspace = true, features = ["attributes"] }
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }

# workspace crates
trojan-core.workspace = true
trojan-proto.workspace = true
trojan-auth = { workspace = true, features = ["http"] }
trojan-config.workspace = true
trojan-metrics.workspace = true
trojan-analytics = { workspace = true, optional = true }
trojan-rules = { workspace = true, optional = true }
arc-swap = { workspace = true, optional = true }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
ctor.workspace = true
rcgen.workspace = true
tempfile.workspace = true
serde_json.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "server"
harness = false

[lints]
workspace = true
