[package]
name = "trojan-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Pluggable transport abstraction for trojan-rs (TLS, plain TCP, WebSocket)"
keywords = ["trojan", "transport", "tls", "websocket"]
categories = ["network-programming"]

[dependencies]
trojan-core = { workspace = true, features = ["ws"] }
trojan-dns.workspace = true

tokio = { workspace = true, features = ["net", "io-util"] }
tokio-rustls.workspace = true
rustls.workspace = true
rcgen.workspace = true
rustls-pemfile.workspace = true

tokio-tungstenite.workspace = true

serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
